patchage (1.0.1) unstable;

  * Support Jack CV and OSC via metadata.
  * Add support for exporting canvas as PDF.
  * Save window size and position when closed via window manager.
  * Order ports deterministically.
  * Style messages pane to match canvas.
  * Restore messages pane visibility and height.
  * Configure based on compiler target OS for cross-compilation.
  * Fix compilation with Jack DBus.
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Fri, 02 Oct 2015 20:57:23 -0400

patchage (1.0.0) stable;

  * Allow removing connections by selecting their handle and pressing delete.
  * Remove Raul dependency.
  * Switch from FlowCanvas to Ganv (much improved looks and performance).
  * Remove LASH support and simplify UI.
  * Fix font configuration on OSX.
  * Use Mac style key bindings on OSX.
  * Integrate with Mac menu bar on OSX.
  * Support for DOT export for rendering with GraphViz.
  * Use XDG_CONFIG_HOME instead of ~/.patchagerc.
  * Make port colours configurable.
  * Support port pretty names via new Jack metadata API.

 -- David Robillard <d@drobilla.net>  Sun, 27 Apr 2014 23:46:10 -0400

patchage (0.5.0) stable;

  * Auto-arrange interface modules sanely (align corresponding inputs/outputs)
  * Add -J (--no-jack) command line option
  * Add proper --help output and man page
  * Improve performance (dramatically for large setups)
  * Fancy console info/warning/error logging
  * Fix minor memory leaks and reduce memory consumption
  * Fix handling of ALSA duplex ports
  * Hide "split" module menu item when it is useless
  * Fix Jack D-Bus support
  * Mac OS X .app bundle port
  * Bump FlowCanvas dependency to 0.7.0
  * Add more/larger icons
  * Add missing COPYING file to distribution
  * Build system and code quality improvements

 -- David Robillard <d@drobilla.net>  Tue, 11 Jan 2011 17:42:07 -0500

patchage (0.4.5) stable;

  * Install SVG icon
  * Fix compilation without Jack
  * Improve performance when dragging modules