@@ -1160,15 +1160,30 @@ The bar represents the percentage of available time used for audio processing (i
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkComboBox" id="buf_size_combo">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="border_width">1</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Jack buffer length in frames</property>
+                            <property name="tooltip_text" translatable="yes">Jack buffer length in frames</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkLabel" id="latency_label">
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">? frames @ ? kHz (? ms)</property>
+                            <property name="label" translatable="yes">frames @ ? kHz (? ms)</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="padding">1</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
