@@ -4,13 +4,14 @@ patchage (1.0.1) unstable;
   * Add support for exporting canvas as PDF.
   * Save window size and position when closed via window manager.
   * Order ports deterministically.
+  * Bring back Jack buffer size selector.
   * Style messages pane to match canvas.
   * Restore messages pane visibility and height.
   * Configure based on compiler target OS for cross-compilation.
   * Fix compilation with Jack DBus.
   * Upgrade to waf 1.8.14
 
- -- David Robillard <d@drobilla.net>  Fri, 02 Oct 2015 20:57:23 -0400
+ -- David Robillard <d@drobilla.net>  Fri, 04 Dec 2015 20:20:57 -0500
 
 patchage (1.0.0) stable;
 
